Fix close btn z-index issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -188,6 +188,7 @@ html, body {
     position: absolute;
     top: 10px;
     right: 10px;
+    z-index: 100;
     border: 1px solid #fff;
     border-radius: 50%;
     width: 30px;
